Expediente en progreso

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ web:
   environment:
   - WORDPRESS_DB_PASSWORD=12345
   ports:
-  - "127.0.0.3:8080:80"
+  - "8080:80"
   volumes:
-  - C:\Users\Ardilla\Documents\Proyectos\qi-theme\:/var/www/html/wp-content/themes/qi-theme
-  - C:\Users\Ardilla\Documents\Proyectos\cesqt-qi\:/var/www/html/wp-content/plugins/cest-qi
-  - C:\Users\Ardilla\Documents\Proyectos\expedientes-qi\:/var/www/html/wp-content/plugins/expedientes-qi
-  - C:\Users\Ardilla\Documents\Proyectos\resiliencia-qi\:/var/www/html/wp-content/plugins/resiliencia-qi
-  - C:\Users\Ardilla\Documents\Proyectos\areasorg-qi\:/var/www/html/wp-content/plugins/areasorg-qi
+  - /Users/nthings/Documents/Projects/qi-theme/:/var/www/html/wp-content/themes/qi-theme
+  - /Users/nthings/Documents/Projects/cesqt-qi/:/var/www/html/wp-content/plugins/cest-qi
+  - /Users/nthings/Documents/Projects/expedientes-qi/:/var/www/html/wp-content/plugins/expedientes-qi
+  - /Users/nthings/Documents/Projects/resiliencia-qi/:/var/www/html/wp-content/plugins/resiliencia-qi
+  - /Users/nthings/Documents/Projects/areasorg-qi/:/var/www/html/wp-content/plugins/areasorg-qi
 mysql:
   image: mysql:5.7
   environment:
